# 3KSample

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
admin-web/: build.gradle.kts  gradle.properties
admin-web/src/main/kotlin/: Main.kt
admin-web/src/main/kotlin/config/: DatabaseConfig.kt
admin-web/src/main/kotlin/routing/: RankRouting.kt  SampleRouting.kt  UserRouting.kt
admin-web/src/main/kotlin/session/: UserSession.kt
admin-web/src/main/resources/: application.yaml
admin-web/src/test/kotlin/: ApplicationTest.kt
jni/: CMakeLists.txt  library.cpp  library.h
lib-common/: build.gradle.kts
lib-common/src/main/kotlin/request/: ReqLogin.kt
lib-common/src/main/kotlin/response/: AjaxResult.kt
lib-common/src/test/kotlin/: SerializeTest.kt
lib-database/: build.gradle.kts
lib-database/src/main/kotlin/: DatabaseConfig.kt  WHDatabase.kt
lib-database/src/main/kotlin/entity/: MHUserHour.kt  SysDept.kt  SysMenu.kt  SysPost.kt  SysRole.kt  SysRoleMenu.kt  SysUser.kt  SysUserPost.kt  SysUserRole.kt
lib-database/src/main/kotlin/table/: MHUserHours.kt  SysDepts.kt  SysMenus.kt  (+6 more)
lib-database/src/test/kotlin/: WHDatabaseTest.kt
lib-native/: build.gradle.kts
lib-native/src/main/kotlin/: Demo.kt  Scripting.kt
lib-native/src/test/kotlin/: Test.kt
lib-rank/: build.gradle.kts
lib-rank/src/main/kotlin/: RankMapper.kt
lib-rank/src/test/kotlin/: RankMapperTest.kt
lib-system/: build.gradle.kts
lib-system/src/main/kotlin/: UserMapper.kt
lib-system/src/test/kotlin/: CryptoTest.kt
lib-working-hour/: build.gradle.kts
(+1 files in other folders)
